--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,18 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <button class="gridSizeButton">Change Grid Size </button>
-    <div class="container"></div>
+    <div class="content">
+        <div class="options">
+            <button class="gridSizeButton">Change Grid Size </button>
+            <button class="defaultModeButton">Default Mode</button>
+            <button class="colorfulModeButton">colorfulButton Mode</button>
+            <button class="shadeModeButton">Shading Mode</button>
+        </div>
+
+        <div class="sketchpad"></div>
+    </div>
 </body>
+
 </html>
