--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
+    <div class="header"> Etch a Sketch</div>
     <div class="content">
         <div class="options">
-            <button class="gridSizeButton">Change Grid Size </button>
-            <button class="defaultModeButton">Default Mode</button>
-            <button class="colorfulModeButton">colorfulButton Mode</button>
-            <button class="shadeModeButton">Shading Mode</button>
+            <button class="gridSize Button">Change Grid Size </button>
+            <button class="defaultMode Button">Default Mode</button>
+            <button class="colorfulMode Button">Colorful Mode</button>
+            <button class="shadeMode Button">Shading Mode</button>
         </div>
 
         <div class="sketchpad"></div>
     </div>
+    <div class="footer">Copyright &copy ShabirAhmadLinux & TheOdinProject 2025 </div>
 </body>
 
 </html>
